<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_13sdp"
    android:id="@+id/cdView"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgPerson"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_95sdp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvSpecialPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgPerson"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSpecialPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/imgPerson"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/tvSpecialPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvSpecialPrice"
            app:layout_constraintTop_toTopOf="@+id/tvSpecialPrice" />

        <LinearLayout
            android:id="@+id/llCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imgPerson"
            app:layout_constraintStart_toStartOf="@+id/imgPerson"
            app:layout_constraintTop_toBottomOf="@+id/imgPerson"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/tvMinus"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="-"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPlus"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="+"
                android:textSize="24sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delivery_in_2_days_thu"
            app:layout_constraintStart_toStartOf="@+id/tvSpecialPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvSpecialPrice" />

        <TextView
            android:id="@+id/tvDeliveryFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="40"
            app:layout_constraintBottom_toBottomOf="@+id/tvDelivery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvDelivery"
            app:layout_constraintTop_toTopOf="@+id/tvDelivery" />

        <TextView
            android:gravity="center"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/ic_delete"
            android:textColor="@color/black"
            android:id="@+id/tvRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDelivery"
            app:layout_constraintTop_toBottomOf="@+id/tvDelivery" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
